--- a/笔记/2019/0519-0525.md
+++ b/笔记/2019/0519-0525.md
@@ -104,3 +104,30 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 ---
 
 [如何向我们的npm包增加类似alpha、beta这样的版本而不会影响正常用户？](https://github.com/iuap-design/blog/issues/248)
+
+- npm发测试包：npm publish --tag beta
+- npm下线包：nom unpublish package-name
+
+---
+
+**typedoc生成markdown格式文档**
+
+`yarn add -D typedoc-plugin-markdown`
+
+---
+
+**standard-version常用commit说明:**
+
+1. fix: a commit of the type fix patches a bug in your codebase (this correlates with PATCH in semantic versioning).
+2. feat: a commit of the type feat introduces a new feature to the codebase (this correlates with MINOR in semantic versioning).
+3. BREAKING CHANGE: a commit that has the text BREAKING CHANGE: at the beginning of its optional body or footer section introduces a breaking API change (correlating with MAJOR in semantic versioning). A BREAKING CHANGE can be part of commits of any type.
+4. Others: 
+    1. build
+    2. ci
+    3. chore
+    4. docs
+    5. perf
+    6. refactor
+    7. revert
+    8. style
+    9. test
