--- a/笔记/2019/0519-0525.md
+++ b/笔记/2019/0519-0525.md
@@ -116,7 +116,7 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 
 ---
 
-**standard-version常用commit说明:**
+**standard-version常用commit说明**
 
 1. fix: a commit of the type fix patches a bug in your codebase (this correlates with PATCH in semantic versioning).
 2. feat: a commit of the type feat introduces a new feature to the codebase (this correlates with MINOR in semantic versioning).
@@ -131,3 +131,25 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
     7. revert
     8. style
     9. test
+
+---
+
+**git全局配置和单个仓库的用户名邮箱配置**
+
+全局配置
+```shell
+$ git config --global user.name "github's Name"
+
+$ git config --global user.email "github@xx.com"
+
+$ git config --list
+```
+
+单个项目配置
+```shell
+$ git config user.name "github's Name"
+
+$ git config user.email "github@xx.com"
+
+$ git config --list
+```
