--- a/笔记/2019/0519-0525.md
+++ b/笔记/2019/0519-0525.md
@@ -82,7 +82,7 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 
 ---
 
-**Flutter手册：**
+**Flutter**
 1. CustomScrollView：CustomScrollView 是可以使用 slivers 来自定义滑动效果的可滚动Widget。
 2. GridView：GridView 是一个可以构建二维网格列表的 可滚动Widget。
 3. PageView：PageView 是可以一页一页滑动的 可滚动Widet。其 子Widget 会占据当前屏幕的所有可见区域。
@@ -95,7 +95,7 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 
 ---
 
-**Flutter手册：**
+**Flutter**
 1. 什么是异步编程？异步是相对于同步来说的，同步代码必须得等代码运行完后才能执行下一步的代码，而异步代码不必等代码运行完，就可以直接运行下一步的，就叫异步代码。
 2. Flutter 是运行在 '单线程' 上的，并不是说 Flutter 只有一个线程，而是指 Flutter 的 Dart 代码是运行在单线程上的。
 3. Dart 代码运行在 Isolate 上：Dart 代码运行的环境叫 Isolate，Dart 代码默认跑在 root Isolate 上。当 Dart 代码正在运行时，同一个 Isolate 中的其他代码无法同时运行。Flutter 可以拥有多个 Isolates，但 Isolates 之间不能共享内存。
@@ -110,13 +110,13 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 
 ---
 
-**typedoc生成markdown格式文档**
+**typedoc生成markdown格式文档：**
 
 `yarn add -D typedoc-plugin-markdown`
 
 ---
 
-**standard-version常用commit说明**
+**standard-version常用commit说明：**
 
 1. fix: a commit of the type fix patches a bug in your codebase (this correlates with PATCH in semantic versioning).
 2. feat: a commit of the type feat introduces a new feature to the codebase (this correlates with MINOR in semantic versioning).
@@ -134,7 +134,7 @@ Marzipan, a technology Apple introduced with few details during last year’s Ke
 
 ---
 
-**git全局配置和单个仓库的用户名邮箱配置**
+**git全局配置和单个仓库的用户名邮箱配置：**
 
 全局配置
 ```shell
