--- a/笔记/2019/0505-0511.md
+++ b/笔记/2019/0505-0511.md
@@ -42,3 +42,42 @@ When you compile Flutter code for the web, your application, the Flutter framewo
 10. 自动化真机测试平台：自动化的运维检测，包括安装包的安装卸载、性能损耗、功能测试等
 11. 移动分析：基于客户端日志埋点的数据分析能力
 12. 一站式移动研发平台：mPasS
+
+---
+
+**How to use logical OR in jest**
+
+Background introduction: Sometimes a function returns multiple values for the same input, and every result is correct. So we need to think that the output is correct in the unit test.
+
+Solution:
+We can put the logical comparison in the "expect" call.
+
+Example:
+```javascript
+expect(p39([2, 3, 1, 0, 2, 5, 3]) === 2 || p39([2, 3, 1, 0, 2, 5, 3]) === 3).toBeTruthy();
+```
+
+---
+
+**What are React Hooks?**
+
+Hooks are new features in React 16.8 that enable us to use state and many other React features without writing a class.
+
+useEffect Hook:
+1. useEffect takes a callback function (called the “effect”) as its first argument, and runs it after each render of the component. In our example, the effect is to set up the "mousemove" event listener after the first render when the component is mounted. The returned callback from the effect, if specified, serves to “clean up” before the component is unmounted. In our example, we are removing the event listener when we unmount.  
+2. The second argument to the useEffect function hook, if specified, is an array of specific state values that the effect will run on whenever the value updates. That is, the effect will run on each re-render of the component triggered by updates to those specific state values. If no array is specified, then the default behavior is to re-render the component and fire the effect whenever any of the state values updates.
+
+---
+
+**Jest & Enzyme:**
+
+1. Both Jest and Enzyme are specially designed to test React Applications, Jest can be used with any other Javascript app but Enzyme only works with React.
+2. Jest can be used without Enzyme to render components and test with snapshots, Enzyme simply adds additional functionality.
+3. Enzyme can be used without Jest, however Enzyme must be paired with another test runner if Jest is not used.
+4. Jest as test runner, assertion library, and mocking library.
+5. Enzyme to provide additional testing utilities to interact with elements.
+6. The difference between “mount”, “shallow” and “render”:
+   1. mount: Full DOM rendering including child components
+   2. Shallow: Renders only the single component
+   3. Render: render to static html, including children
+
