--- a/笔记/2019/0519-0525.md
+++ b/笔记/2019/0519-0525.md
@@ -153,3 +153,425 @@ $ git config user.email "github@xx.com"
 
 $ git config --list
 ```
+
+---
+
+[Clean Code Best Practices](https://devinduct.com/blogpost/22/javascript-clean-code-best-practices)
+
+1. **Strong type checks: Use === instead of ==**
+    ```javascript
+    // If not handled properly, it can dramatically affect the program logic. It's like, you expect to go left, but for some reason, you go right.
+    0 == false // true
+    0 === false // false
+    2 == "2" // true
+    2 === "2" // false
+
+    // example
+    const value = "500";
+    if (value === 500) {
+        console.log(value);
+        // it will not be reached
+    }
+
+    if (value === "500") {
+        console.log(value);
+        // it will be reached
+    }
+    ```
+
+2. **Variables:**
+
+    Name your variables in a way that they reveal the intention behind it. This way they become searchable and easier to understand after a person sees it.
+    ```javascript
+    // bad
+    let daysSLV = 10;
+    let y = new Date().getFullYear();
+
+    let ok;
+    if (user.age > 30) {
+        ok = true;
+    }
+
+    // good
+    const MAX_AGE = 30;
+    let daysSinceLastVisit = 10;
+    let currentYear = new Date().getFullYear();
+
+    ...
+
+    const isUserOlderThanAllowed = user.age > MAX_AGE;
+    ```
+    
+    Don't add extra unneeded words to the variable names.
+    ```javascript
+    // bad
+    let nameValue;
+    let theProduct;
+
+    // good
+    let name;
+    let product;
+    ```
+
+    Don't enforce the need for memorizing the variable context.
+    ```javascript
+    // bad
+    const users = ["John", "Marco", "Peter"];
+    users.forEach(u => {
+        doSomething();
+        doSomethingElse();
+        // ...
+        // ...
+        // ...
+        // ...
+        // Here we have the WTF situation: WTF is `u` for?
+        register(u);
+    });
+
+    // good
+    const users = ["John", "Marco", "Peter"];
+    users.forEach(user => {
+        doSomething();
+        doSomethingElse();
+        // ...
+        // ...
+        // ...
+        // ...
+        register(user);
+    });
+    ```
+
+    Don't add unnecessary context.
+    ```javascript
+    // bad
+    const user = {
+        userName: "John",
+        userSurname: "Doe",
+        userAge: "28"
+    };
+
+    ...
+
+    user.userName;
+
+    // good
+    const user = {
+        name: "John",
+        surname: "Doe",
+        age: "28"
+    };
+
+    ...
+
+    user.name;
+    ```
+3. Function: 
+    Use long and descriptive names. Considering that it represents a certain behavior, a function name should be a verb or a phrase fully exposing the intent behind it as well as the intent of the arguments. Their name should say what they do.
+    ```javascript
+    // bad
+    function notif(user) {
+        // implementation
+    }
+
+    // good
+    function notifyUser(emailAddress) {
+        // implementation
+    }
+    ```
+
+    Avoid a long number of arguments. Ideally, a function should have two or fewer arguments specified. The fewer the arguments, the easier is to test the function.
+    ```javascript
+    // bad
+    function getUsers(fields, fromDate, toDate) {
+        // implementation
+    }
+
+    // good
+    function getUsers({ fields, fromDate, toDate }) {
+        // implementation
+    }
+
+    getUsers({
+        fields: ['name', 'surname', 'email'],
+        fromDate: '2019-01-01',
+        toDate: '2019-01-18'
+    });
+    ```
+
+    Use default arguments instead of conditionals.
+    ```javascript
+    // bad
+    function createShape(type) {
+        const shapeType = type || "cube";
+        // ...
+    }
+
+    // good
+    function createShape(type = "cube") {
+        // ...
+    }
+    ```
+
+    A function should do one thing. Avoid executing multiple actions within a single function.
+    ``` javascript
+    // bad
+    function notifyUsers(users) {
+        users.forEach(user => {
+            const userRecord = database.lookup(user);
+            if (userRecord.isVerified()) {
+            notify(user);
+            }
+        });
+    }
+
+    // good
+    function notifyVerifiedUsers(users) {
+        users.filter(isUserVerified).forEach(notify);
+    }
+
+    function isUserVerified(user) {
+        const userRecord = database.lookup(user);
+        return userRecord.isVerified();
+    }
+    ```
+
+    Use Object.assign to set default objects.
+    ```javascript
+    // bad
+    const shapeConfig = {
+        type: "cube",
+        width: 200,
+        height: null
+    };
+
+    function createShape(config) {
+        config.type = config.type || "cube";
+        config.width = config.width || 250;
+        config.height = config.width || 250;
+    }
+
+    createShape(shapeConfig);
+
+    // good
+    const shapeConfig = {
+        type: "cube",
+        width: 200
+        // Exclude the 'height' key
+    };
+
+    function createShape(config) {
+        config = Object.assign(
+            {
+                type: "cube",
+                width: 250,
+                height: 250
+            },
+            config
+        );
+
+        ...
+    }
+
+    createShape(shapeConfig);
+    ```
+
+    Don't use flags as parameters because they are telling you that the function is doing more than it should.
+    ```javascript
+    // bad
+    function createFile(name, isPublic) {
+        if (isPublic) {
+            fs.create(`./public/${name}`);
+        } else {
+            fs.create(name);
+        }
+    }
+
+    // good
+    function createFile(name) {
+        fs.create(name);
+    }
+
+    function createPublicFile(name) {
+        createFile(`./public/${name}`);
+    }
+    ```
+
+    Don't pollute the globals. If you need to extend an existing object use ES Classes and inheritance instead of creating the function on the prototype chain of the native object.
+    ```javascript
+    // bad
+    Array.prototype.myFunc = function myFunc() {
+        // implementation
+    };
+
+    // good
+    class SuperArray extends Array {
+        myFunc() {
+            // implementation
+        }
+    }
+    ```
+
+4. Conditionals
+    Avoid negative conditionals.
+    ```javascript
+    // bad
+    function isUserNotBlocked(user) {
+        // implementation
+    }
+
+    if (!isUserNotBlocked(user)) {
+        // implementation
+    }
+
+    // good
+    function isUserBlocked(user) {
+        // implementation
+    }
+
+    if (isUserBlocked(user)) {
+        // implementation
+    }
+    ```
+
+    Use conditional shorthands. This might be trivial, but it's worth mentioning. Use this approach only for boolean values and if you are sure that the value will not be undefined or null.
+    ```javascript
+    // bad
+    if (isValid === true) {
+        // do something...
+    }
+
+    if (isValid === false) {
+        // do something...
+    }
+
+    // good
+    if (isValid) {
+        // do something...
+    }
+
+    if (!isValid) {
+        // do something...
+    }
+    ```
+
+    Avoid conditionals whenever possible. Use polymorphism and inheritance instead.
+    ```javascript
+    // bad
+    class Car {
+        // ...
+        getMaximumSpeed() {
+            switch (this.type) {
+            case "Ford":
+                return this.someFactor() + this.anotherFactor();
+            case "Mazda":
+                return this.someFactor();
+            case "McLaren":
+                return this.someFactor() - this.anotherFactor();
+            }
+        }
+    }
+
+    // good
+    class Car {
+        // ...
+    }
+
+    class Ford extends Car {
+        // ...
+        getMaximumSpeed() {
+            return this.someFactor() + this.anotherFactor();
+        }
+    }
+
+    class Mazda extends Car {
+        // ...
+        getMaximumSpeed() {
+            return this.someFactor();
+        }
+    }
+
+    class McLaren extends Car {
+        // ...
+        getMaximumSpeed() {
+            return this.someFactor() - this.anotherFactor();
+        }
+    }
+    ```
+
+5. ES Classes
+    Classes are the new syntactic sugar in JavaScript. Everything works just as it did before with prototype only it now looks different and you should prefer them over ES5 plain functions.
+    ```javascript
+    // bad
+    const Person = function(name) {
+    if (!(this instanceof Person)) {
+        throw new Error("Instantiate Person with `new` keyword");
+    }
+
+    this.name = name;
+    };
+
+    Person.prototype.sayHello = function sayHello() { /**/ };
+
+    const Student = function(name, school) {
+    if (!(this instanceof Student)) {
+        throw new Error("Instantiate Student with `new` keyword");
+    }
+
+    Person.call(this, name);
+        this.school = school;
+    };
+
+    Student.prototype = Object.create(Person.prototype);
+    Student.prototype.constructor = Student;
+    Student.prototype.printSchoolName = function printSchoolName() { /**/ };
+
+    // good
+    class Person {
+        constructor(name) {
+            this.name = name;
+        }
+
+        sayHello() {
+            /* ... */
+        }
+    }
+
+    class Student extends Person {
+        constructor(name, school) {
+            super(name);
+            this.school = school;
+        }
+
+        printSchoolName() {
+            /* ... */
+        }
+    }
+    ```
+
+    Use method chaining. Many libraries such as jQuery and Lodash use this pattern. As a result, your code will be less verbose. In your class, simply return this at the end of every function, and you can chain further class methods onto it.
+    ```javascript
+    // bad
+    class Person {
+        constructor(name) {
+            this.name = name;
+        }
+
+        setSurname(surname) {
+            this.surname = surname;
+        }
+
+        setAge(age) {
+            this.age = age;
+        }
+
+        save() {
+            console.log(this.name, this.surname, this.age);
+        }
+    }
+
+    const person = new Person("John");
+    person.setSurname("Doe");
+    person.setAge(29);
+    person.save();
+    ```
+6. Avoid In General
