--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -24,3 +24,9 @@
         - 程序状态字寄存器：这个寄存器包含了条件码位、CPU优先级、模式（用户态或内核态），以及各种其他控制位。
         - 流水线设计，CPU具有同时取出多条指令的机制：一个CPU可以有分开的取指单元、解码单元和执行单元，于是当它执行指令n时，它还可以对指令n+1解码，并且读取指令n+2。
         - 超标量CPU，比流水线更先进的设计：在这种设计中，拥有多个执行单元，例如一个CPU用于整数算术运算，一个CPU用于浮点算术运算，另一个用于布尔运算。两个或更多的指令被同时取出、解码并装入一个保持缓冲区中，直至它们执行完毕。
+    2. 存储器：存储器系统采用一种分层次的结构，寄存器、高速缓存、内存、磁盘、磁带，顶层的存储器速度较高，容量较小，与底层的存储器相比每位成本较高。
+        - 存储器系统的顶层是CPU中的寄存器。它们用与CPU相同的材料制成，所以和CPU一样快。
+        - 下一层是高速缓存，它多数由硬件控制。
+        - 主存：通常被成为随机访问存储器（RAM）
+        - 非易失性随机访问存储器：在电源切断之后，不会丢失内容，ROM
+        - EEPROM：电可擦除可编程ROM。
