--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -30,3 +30,12 @@
         - 主存：通常被成为随机访问存储器（RAM）
         - 非易失性随机访问存储器：在电源切断之后，不会丢失内容，ROM
         - EEPROM：电可擦除可编程ROM。
+        - 磁盘：磁盘同RAM相比，每个二进制位的成本低了两个数量级，而且经常也有两个数量级大的容量。磁盘唯一的问题是随机访问数据时间大约慢了三个数量级。其低速的原因是磁盘是一种机械装置。每个磁道划分为若干个扇区，扇区的典型值是512字节。
+        - 上下文切换：在多道程序系统中，从一个程序切换到另一个程序。
+        - 磁带：在存储器体系中的最后一层是磁带。这种介质用于磁盘备份，可以保存非常大量的数据集。
+    3. I/O设备：
+        - I/O设备一般包括两个部分：设备控制器和设备本身。控制器是插在电路板上的一块芯片或一组芯片，这块电路板物理地控制设备。它从操作系统接收命令。
+        - 实现输入和输出的方式有三种。
+            1. 忙等待：用户程序发出一个系统调用，内核将其翻译成一个对应设备驱动程序的过程调用。缺点是要占据CPU，CPU一直轮询设备直到对应的I/O操作完成。
+            2. 设备驱动程序启动设备并且让该设备在操作完成时发出一个中断。
+            3. 第三种方式：为I/O使用一种特殊的直接存储器访问（DMA）芯片，它可以控制在内存和某些控制器之间的位流，而无须持续的CPU干预。
