--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -39,3 +39,38 @@
             1. 忙等待：用户程序发出一个系统调用，内核将其翻译成一个对应设备驱动程序的过程调用。缺点是要占据CPU，CPU一直轮询设备直到对应的I/O操作完成。
             2. 设备驱动程序启动设备并且让该设备在操作完成时发出一个中断。
             3. 第三种方式：为I/O使用一种特殊的直接存储器访问（DMA）芯片，它可以控制在内存和某些控制器之间的位流，而无须持续的CPU干预。
+        - 中断向量：设备编号可以成为部分内存的一个引用，用于寻找该设备中断处理程序的地址，这部分内存称为中断向量。
+    4. 总线:
+       1. 通用串行总线（USB）：用来将所有慢速IO设备，例如键盘和鼠标，与计算机连接。
+       2. SCSI：是一种高速总线，用在高速硬盘、扫描仪和其他需要较大宽带的设备上。
+9. 操作系统分类：
+   1. 大型机操作系统
+   2. 服务器操作系统
+   3. 多处理器操作系统
+   4. 个人计算机操作系统
+   5. 掌上计算机操作系统
+   6. 嵌入式操作系统
+   7. 传感器节点操作系统
+   8. 实时操作系统：特征是将时间作为关键参数
+   9. 智能卡操作系统
+10. 操作系统概念：
+    1. 进程：进程本质上是正在执行的一个程序。
+       1. 地址空间：与每个进程相关的是地址空间，这是从某个最小值的存储位置到某个最大值存储位置的列表。
+       2. 在地址空间中，进程可以进行读写。
+       3. 该地址空间中存放有可执行程序、程序的数据以及程序的堆栈。
+       4. 与每个进程相关的还有资源集，通常包括寄存器（含有程序计数器和堆栈指针）、打开文件的清单、突出的报警、有关进程清单，以及运行该程序所需要的其他所有信息。
+       5. 进程表：与一个进程有关的所有信息，除了该进程自身地址空间的内容以外，均存放在操作系统的一张表中，称为进程表，进程表是数组或链表结构。
+       6. 进程间通信：合作完成某些作业的相关进程经常需要彼此通信以便同步他们的行为。
+    2. 地址空间：每个进程有一些可以使用的地址集合，典型值从0开始直到某个最大值。在最简单的情形下，一个进程可拥有的最大地址空间小于主存。在这种方式下，进程可以用满其地址空间，而且内存中也有足够的空间容纳其他进程。
+    3. 文件：操作系统的一项主要功能是隐藏磁盘和其他IO设备的细节特性，并提供给程序员一个良好、清晰的独立于设备的抽象文件模型。
+
+11. 操作系统结构：
+    1. 单体系统：全部操作系统在内核态中以单一程序的方式运行。整个操作系统以过程集合的方式编写，链接成一个大型可执行二进制程序。
+    2. 层次式系统：共分为六层，操作员、用户程序、输入/输出管理、操作员-进程通信、存储器和磁鼓管理、处理器分配和多道程序设计。
+    3. 微内核
+    4. 客户机-服务器模式
+    5. 虚拟机
+    6. 外核
+
+## 第2章 进程与线程
+
