--- a/笔记/2019/0526-0601.md
+++ b/笔记/2019/0526-0601.md
@@ -65,3 +65,64 @@
 
 ---
 
+**Flutter 路由：Route**
+
+在 Android 和 iOS 中，这种全屏的页面叫 Activity 或 ViewController，在 Flutter 中，这种全屏的页面就是 Route，Navigator 通过堆管理Route对象，从而实现页面跳转。
+
+在 Flutter 中跳转页面有两种方式，一种是 Simple Route(简单路由)，一种是 Named Route(命名路由)。
+
+---
+
+**Flutter与Native通信：PlatformChannel**
+
+PlatformChannel 用于 Flutter 与 Native(Android、iOS) 之间的消息传递。
+
+不仅可以方便的将 Native 的功能拓展给 Flutter 使用，而且也能将 Flutter 的功能扩展给 Native 使用。
+
+**PlatformChannel的种类**
+
+有三种 PlatformChannel 种类，适用于不同的场景：
+1. MethodChannel: 以方法的模式使用 PlatformChannel
+2. EventChannel: 以事件的模式使用 PlatformChannel
+3. BasicMessageChannel: 可以在 BasicMessageChannel 上方便的进行自定义扩展，主要用于个性化的扩展。
+
+---
+
+**Flutter性能监控工具**
+
+1. PerformanceOverlay: PerformanceOverlay 是在 app 上显示性能统计数据的浮窗。PerformanceOverlay 是一个 Widget，有几个属性，用于控制开启哪些功能。
+2. Observatory: Observatory 是用于分析和调试 Dart 代码的工具，用于 Dart 的 debugger
+
+---
+
+**Flutter的三种构建模式(build modes)**
+
+1. Debug(模拟器只能运行 Debug 模式): 
+   1. Flutter 的断言（Assertions）功能是开的
+   2. Flutter 的 Observatory 是开的，Observatory 是用于分析和调试 Dart 代码的工具，用于 Dart 的 debugger
+   3. 扩展的服务功能（Service extensions）是开启的，如第二点的 Observatory 的服务还有性能的服务等。
+   4. JIT 编译模式，可以使用 Hot Reload，为了快速开发
+
+2. Release(Release 模式只能跑在真机上):
+   1. 断言（Assertions）功能关闭
+   2. 没有 Debugging 的信息
+   3. Debugger 的功能关闭
+   4. AOT 编译，为了快速启动，快速执行和更小的包装包大小。
+   5. 扩展的服务功能（Service extensions）关闭
+
+3. Profile(Profile 模式只能跑在真机上): Profile 是专门监控性能的模式，在 Debug 模式下，不能实际反应应用的性能，而在 Release 模式下，却没有监控的功能，所以就诞生了 Profile 模式，Profile 模式和 Release 模式更接近，Profile 和 Release 都采用的 AOT 编译，所以都不能用 Hot Reload，但是 Profile 相对于 Release，多了如下的功能：
+   1. 一些扩展的服务功能（Service extensions）是打开的，例如监控性能的浮层等。
+   2. Tracing 是打开的，Observatory 也可以连接到进程
+
+---
+
+**Flutter UI 的渲染流程：**
+
+1. 首先会创建一个 Widget 树: Widget 只包含配置信息，不包含渲染，是很轻量的，所以即使每帧都重建，所以也不会有性能问题。
+2. 创建 Element 树: 遍历 Widget 树时，通过调用 Widget 的 createElement() 方法，会创建对应的 Element 树。Element 树是不会重建的，只会进行更新，因为旧的 Widget 保存在 Element 里，当状态发生变化 Widget树 重建的时候，新生成的 Widget树 就会与保存在 Element 里旧的 Widget树 进行对比，发现变化的时候会更新 Element，Element 在更新 RenderObject。Element 的主要工作就是对比，是三个视图树里的核心部分。这个机制保证了虽然 Widget 每帧都重建，但是 Element 却只会更新变化的部分，因此保证了性能没有问题。
+3. 创建 RenderObject 树: 当Element mount 的时候，就会创建 RenderObject，RenderObject 就是实际负责渲染的部分，因此 RenderObject 的操作是很昂贵的，所以要尽可能的复用，而不是创建新的。
+
+总结：
+- Widget：Widget 只含有配置信息，不负责渲染，非常轻量，因此可以大量频繁的创建。
+- Element：Element 负责 diff，只更新变化的部分。
+- RenderObject：RenderObject 负责渲染。
