--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -89,3 +89,8 @@
     7. 在UNIX系统中，只有一个系统调用可以用来创建新进程：fork。在调用了fork之后，这两个进程（父进程和子进程）拥有相同的存储映像、同样的环境字符串和同样的打开文件。
     8. 在UNIX和Windows中，进程创建之后，父进程和子进程有各自不同的地址空间。
     9. 进程的终止：
+       1. 正常退出（自愿的）
+       2. 出错退出（自愿的）
+       3. 严重错误（非自愿）
+       4. 被其他进程杀死（非自愿）：系统调用是kill
+   10. 多数进程是由于完成了它们的工作而终止。当编译器完成了所给定程序的编译之后，编译器执行一个系统调用，通知操作系统它的工作已经完成。在UNIX中该调用是exit
