--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -8,60 +8,60 @@
 4. 多数计算机有两种运行模式：内核态和用户态。
 5. 软件中最基础的部分是操作系统，它运行在内核态。在这个模式中，操作系统具有对所有硬件的完全访问权，可以执行机器能够运行的任何指令。软件的其余部分运行在用户态下。在用户态下，只使用了机器指令中的一个子集。
 6. 资源管理包括用以下两种不同方式实现多路复用（共享）资源：在时间上复用和在空间上复用。
-   - 在时间上复用：不同的程序或用户轮流使用它。例如若系统中只有一个 CPU，而多个程序需要在该 CPU 上运行，操作系统则首先把该 CPU 分配给某一个程序，在他运行足够长的时间之后，另一个程序得到 CPU，然后是下一个，如此进行下去，最终，轮到第一个程序再次运行。
-   - 空间复用：每个客户都得到资源的一部分，从而取代了客户排队。例如，通常在若干运行程序之间分割内存，这样每一个运行程序都可同时入住内存。假设有足够的内存可以存放多个程序，那么在内存中同时存放若干个程序的效率，比把所有内存都分给一个程序的效率要高得多。有关空间复用的其他资源还有磁盘。
+    - 在时间上复用：不同的程序或用户轮流使用它。例如若系统中只有一个 CPU，而多个程序需要在该 CPU 上运行，操作系统则首先把该 CPU 分配给某一个程序，在他运行足够长的时间之后，另一个程序得到 CPU，然后是下一个，如此进行下去，最终，轮到第一个程序再次运行。
+    - 空间复用：每个客户都得到资源的一部分，从而取代了客户排队。例如，通常在若干运行程序之间分割内存，这样每一个运行程序都可同时入住内存。假设有足够的内存可以存放多个程序，那么在内存中同时存放若干个程序的效率，比把所有内存都分给一个程序的效率要高得多。有关空间复用的其他资源还有磁盘。
 7. 操作系统的历史：
-   1. 第一代：真空管和穿孔卡片
-   2. 第二代：晶体管和批处理程序
-   3. 第三代：集成电路芯片和多道程序设计
-   4. 第四代：个人计算机
+    1. 第一代：真空管和穿孔卡片
+    2. 第二代：晶体管和批处理程序
+    3. 第三代：集成电路芯片和多道程序设计
+    4. 第四代：个人计算机
 8. 计算机硬件：
-   1. CPU：从内存中取出指令并执行。在每个 CPU 基本周期中，首先从内存取出指令，解码以确定其类型和操作数，接着执行，然后取指、解码并执行下一条命令。
-      - 每个 CPU 都有一套可执行的专门指令集。
-      - CPU 内部有用来保存关键变量和临时数据的寄存器。
-      - 程序计数器寄存器：保存了将要取出的下一条指令的内存地址，在指令取出之后，程序计数器就被更新以便指向后继的指令。
-      - 堆栈指针寄存器：指向内存中当前栈的顶端。保存了有关的输入参数、局部变量以及那些没有保存在寄存器中的临时变量。
-      - 程序状态字寄存器：这个寄存器包含了条件码位、CPU 优先级、模式（用户态或内核态），以及各种其他控制位。
-      - 流水线设计，CPU 具有同时取出多条指令的机制：一个 CPU 可以有分开的取指单元、解码单元和执行单元，于是当它执行指令 n 时，它还可以对指令 n+1 解码，并且读取指令 n+2。
-      - 超标量 CPU，比流水线更先进的设计：在这种设计中，拥有多个执行单元，例如一个 CPU 用于整数算术运算，一个 CPU 用于浮点算术运算，另一个用于布尔运算。两个或更多的指令被同时取出、解码并装入一个保持缓冲区中，直至它们执行完毕。
-   2. 存储器：存储器系统采用一种分层次的结构，寄存器、高速缓存、内存、磁盘、磁带，顶层的存储器速度较高，容量较小，与底层的存储器相比每位成本较高。
-      - 存储器系统的顶层是 CPU 中的寄存器。它们用与 CPU 相同的材料制成，所以和 CPU 一样快。
-      - 下一层是高速缓存，它多数由硬件控制。
-      - 主存：通常被成为随机访问存储器（RAM）
-      - 非易失性随机访问存储器：在电源切断之后，不会丢失内容，ROM
-      - EEPROM：电可擦除可编程 ROM。
-      - 磁盘：磁盘同 RAM 相比，每个二进制位的成本低了两个数量级，而且经常也有两个数量级大的容量。磁盘唯一的问题是随机访问数据时间大约慢了三个数量级。其低速的原因是磁盘是一种机械装置。每个磁道划分为若干个扇区，扇区的典型值是 512 字节。
-      - 上下文切换：在多道程序系统中，从一个程序切换到另一个程序。
-      - 磁带：在存储器体系中的最后一层是磁带。这种介质用于磁盘备份，可以保存非常大量的数据集。
-   3. I/O 设备：
-      - I/O 设备一般包括两个部分：设备控制器和设备本身。控制器是插在电路板上的一块芯片或一组芯片，这块电路板物理地控制设备。它从操作系统接收命令。
-      - 实现输入和输出的方式有三种。
-        1. 忙等待：用户程序发出一个系统调用，内核将其翻译成一个对应设备驱动程序的过程调用。缺点是要占据 CPU，CPU 一直轮询设备直到对应的 I/O 操作完成。
-        2. 设备驱动程序启动设备并且让该设备在操作完成时发出一个中断。
-        3. 第三种方式：为 I/O 使用一种特殊的直接存储器访问（DMA）芯片，它可以控制在内存和某些控制器之间的位流，而无须持续的 CPU 干预。
-      - 中断向量：设备编号可以成为部分内存的一个引用，用于寻找该设备中断处理程序的地址，这部分内存称为中断向量。
-   4. 总线:
-      1. 通用串行总线（USB）：用来将所有慢速 IO 设备，例如键盘和鼠标，与计算机连接。
-      2. SCSI：是一种高速总线，用在高速硬盘、扫描仪和其他需要较大宽带的设备上。
+    1. CPU：从内存中取出指令并执行。在每个 CPU 基本周期中，首先从内存取出指令，解码以确定其类型和操作数，接着执行，然后取指、解码并执行下一条命令。
+        - 每个 CPU 都有一套可执行的专门指令集。
+        - CPU 内部有用来保存关键变量和临时数据的寄存器。
+        - 程序计数器寄存器：保存了将要取出的下一条指令的内存地址，在指令取出之后，程序计数器就被更新以便指向后继的指令。
+        - 堆栈指针寄存器：指向内存中当前栈的顶端。保存了有关的输入参数、局部变量以及那些没有保存在寄存器中的临时变量。
+        - 程序状态字寄存器：这个寄存器包含了条件码位、CPU 优先级、模式（用户态或内核态），以及各种其他控制位。
+        - 流水线设计，CPU 具有同时取出多条指令的机制：一个 CPU 可以有分开的取指单元、解码单元和执行单元，于是当它执行指令 n 时，它还可以对指令 n+1 解码，并且读取指令 n+2。
+        - 超标量 CPU，比流水线更先进的设计：在这种设计中，拥有多个执行单元，例如一个 CPU 用于整数算术运算，一个 CPU 用于浮点算术运算，另一个用于布尔运算。两个或更多的指令被同时取出、解码并装入一个保持缓冲区中，直至它们执行完毕。
+    2. 存储器：存储器系统采用一种分层次的结构，寄存器、高速缓存、内存、磁盘、磁带，顶层的存储器速度较高，容量较小，与底层的存储器相比每位成本较高。
+        - 存储器系统的顶层是 CPU 中的寄存器。它们用与 CPU 相同的材料制成，所以和 CPU 一样快。
+        - 下一层是高速缓存，它多数由硬件控制。
+        - 主存：通常被成为随机访问存储器（RAM）
+        - 非易失性随机访问存储器：在电源切断之后，不会丢失内容，ROM
+        - EEPROM：电可擦除可编程 ROM。
+        - 磁盘：磁盘同 RAM 相比，每个二进制位的成本低了两个数量级，而且经常也有两个数量级大的容量。磁盘唯一的问题是随机访问数据时间大约慢了三个数量级。其低速的原因是磁盘是一种机械装置。每个磁道划分为若干个扇区，扇区的典型值是 512 字节。
+        - 上下文切换：在多道程序系统中，从一个程序切换到另一个程序。
+        - 磁带：在存储器体系中的最后一层是磁带。这种介质用于磁盘备份，可以保存非常大量的数据集。
+    3. I/O 设备：
+        - I/O 设备一般包括两个部分：设备控制器和设备本身。控制器是插在电路板上的一块芯片或一组芯片，这块电路板物理地控制设备。它从操作系统接收命令。
+        - 实现输入和输出的方式有三种。
+            1. 忙等待：用户程序发出一个系统调用，内核将其翻译成一个对应设备驱动程序的过程调用。缺点是要占据 CPU，CPU 一直轮询设备直到对应的 I/O 操作完成。
+            2. 设备驱动程序启动设备并且让该设备在操作完成时发出一个中断。
+            3. 第三种方式：为 I/O 使用一种特殊的直接存储器访问（DMA）芯片，它可以控制在内存和某些控制器之间的位流，而无须持续的 CPU 干预。
+        - 中断向量：设备编号可以成为部分内存的一个引用，用于寻找该设备中断处理程序的地址，这部分内存称为中断向量。
+    4. 总线:
+        1. 通用串行总线（USB）：用来将所有慢速 IO 设备，例如键盘和鼠标，与计算机连接。
+        2. SCSI：是一种高速总线，用在高速硬盘、扫描仪和其他需要较大宽带的设备上。
 9. 操作系统分类：
-   1. 大型机操作系统
-   2. 服务器操作系统
-   3. 多处理器操作系统
-   4. 个人计算机操作系统
-   5. 掌上计算机操作系统
-   6. 嵌入式操作系统
-   7. 传感器节点操作系统
-   8. 实时操作系统：特征是将时间作为关键参数
-   9. 智能卡操作系统
+    1. 大型机操作系统
+    2. 服务器操作系统
+    3. 多处理器操作系统
+    4. 个人计算机操作系统
+    5. 掌上计算机操作系统
+    6. 嵌入式操作系统
+    7. 传感器节点操作系统
+    8. 实时操作系统：特征是将时间作为关键参数
+    9. 智能卡操作系统
 10. 操作系统概念：
 
     1. 进程：进程本质上是正在执行的一个程序。
-       1. 地址空间：与每个进程相关的是地址空间，这是从某个最小值的存储位置到某个最大值存储位置的列表。
-       2. 在地址空间中，进程可以进行读写。
-       3. 该地址空间中存放有可执行程序、程序的数据以及程序的堆栈。
-       4. 与每个进程相关的还有资源集，通常包括寄存器（含有程序计数器和堆栈指针）、打开文件的清单、突出的报警、有关进程清单，以及运行该程序所需要的其他所有信息。
-       5. 进程表：与一个进程有关的所有信息，除了该进程自身地址空间的内容以外，均存放在操作系统的一张表中，称为进程表，进程表是数组或链表结构。
-       6. 进程间通信：合作完成某些作业的相关进程经常需要彼此通信以便同步他们的行为。
+        1. 地址空间：与每个进程相关的是地址空间，这是从某个最小值的存储位置到某个最大值存储位置的列表。
+        2. 在地址空间中，进程可以进行读写。
+        3. 该地址空间中存放有可执行程序、程序的数据以及程序的堆栈。
+        4. 与每个进程相关的还有资源集，通常包括寄存器（含有程序计数器和堆栈指针）、打开文件的清单、突出的报警、有关进程清单，以及运行该程序所需要的其他所有信息。
+        5. 进程表：与一个进程有关的所有信息，除了该进程自身地址空间的内容以外，均存放在操作系统的一张表中，称为进程表，进程表是数组或链表结构。
+        6. 进程间通信：合作完成某些作业的相关进程经常需要彼此通信以便同步他们的行为。
     2. 地址空间：每个进程有一些可以使用的地址集合，典型值从 0 开始直到某个最大值。在最简单的情形下，一个进程可拥有的最大地址空间小于主存。在这种方式下，进程可以用满其地址空间，而且内存中也有足够的空间容纳其他进程。
     3. 文件：操作系统的一项主要功能是隐藏磁盘和其他 IO 设备的细节特性，并提供给程序员一个良好、清晰的独立于设备的抽象文件模型。
 
@@ -85,12 +85,21 @@
         2. 执行了正在运行的进程所调用的进程创建系统调用
         3. 用户请求创建一个新进程
         4. 一个批处理作业的初始化
-    6. 守护进程：停留在后台处理诸如电子邮件、web页面、新闻、打印之类的活动的进程称为守护进程。
-    7. 在UNIX系统中，只有一个系统调用可以用来创建新进程：fork。在调用了fork之后，这两个进程（父进程和子进程）拥有相同的存储映像、同样的环境字符串和同样的打开文件。
-    8. 在UNIX和Windows中，进程创建之后，父进程和子进程有各自不同的地址空间。
+    6. 守护进程：停留在后台处理诸如电子邮件、web 页面、新闻、打印之类的活动的进程称为守护进程。
+    7. 在 UNIX 系统中，只有一个系统调用可以用来创建新进程：fork。在调用了 fork 之后，这两个进程（父进程和子进程）拥有相同的存储映像、同样的环境字符串和同样的打开文件。
+    8. 在 UNIX 和 Windows 中，进程创建之后，父进程和子进程有各自不同的地址空间。
     9. 进程的终止：
-       1. 正常退出（自愿的）
-       2. 出错退出（自愿的）
-       3. 严重错误（非自愿）
-       4. 被其他进程杀死（非自愿）：系统调用是kill
-   10. 多数进程是由于完成了它们的工作而终止。当编译器完成了所给定程序的编译之后，编译器执行一个系统调用，通知操作系统它的工作已经完成。在UNIX中该调用是exit
+        1. 正常退出（自愿的）
+        2. 出错退出（自愿的）
+        3. 严重错误（非自愿）
+        4. 被其他进程杀死（非自愿）：系统调用是 kill
+    10. 多数进程是由于完成了它们的工作而终止。当编译器完成了所给定程序的编译之后，编译器执行一个系统调用，通知操作系统它的工作已经完成。在 UNIX 中该调用是 exit
+    11. 进程的层次结构：某些系统中，当进程创建了另一个进程后，父进程和子进程就以某种形式继续保持关联。子进程自身可以创建出更多的进程，组成一个进程的层次结构。进程只有一个父进程，但可以有零个、一个或多个子进程。
+    12. 在 UNIX 中，进程和它的所有子女及后裔共同组成一个进程组。
+    13. 进程的三种状态：
+        1. 运行态（该时刻进程实际占用 CPU）
+        2. 就绪态（可运行，但因为其他进程正在运行而暂时停止）
+        3. 阻塞态（除非某种外部事件发生，否则进程不能运行）
+    14. 调度程序的主要工作就是决定应当运行哪个进程、何时运行及它应该运行多长时间。
+    15. 进程的实现：
+        1. 为了实现进程模型，操作系统维护着一张表格（一个结构数组）即进程表。
