--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -76,6 +76,7 @@
 ## 第 2 章 进程与线程
 
 1. 进程：
+
     1. 在进程模型中，计算机上所有可运行的软件，通常也包括操作系统，被组织成若干个顺序进程，简称进程。
     2. 一个进程就是一个正在执行程序的实例，包括程序计数器、寄存器和变量的当前值。
     3. 一个进程是某种类型的一个活动，它有程序、输入、输出以及状态。
@@ -103,3 +104,42 @@
     14. 调度程序的主要工作就是决定应当运行哪个进程、何时运行及它应该运行多长时间。
     15. 进程的实现：
         1. 为了实现进程模型，操作系统维护着一张表格（一个结构数组）即进程表。
+        2. 每个进程占用一个进程表项，该表项包含了进程状态的重要信息，包括程序计数器、堆栈指针、内存分配状况、所打开文件的状态、账号和调度信息，以及其他在进程由运行状态转换到就绪态或阻塞态时必须保存的信息，从而保证该进程随后能再次启动，就像从未中断过一样。
+        3. 典型的进程表表项中的一些字段：
+            1. 进程管理：寄存器、程序计数器、程序状态字、堆栈指针、进程状态、优先级、调度参数、进程 ID、父进程、进程组、信号、进程开始时间、使用的 CPU 时间、子进程的 CPU 时间、下次报警时间。
+            2. 存储管理：正文段指针、数据段指针、堆栈段指针。
+            3. 文件管理：根目录、工作目录、文件描述符、用户 ID、组 ID。
+        4. 与每一 IO 类关联的是一个称作中断向量的位置。它包含中断服务程序的入口地址。
+    16. 多道程序设计模型：采用多道程序设计可以提高 CPU 的利用率。
+
+2. 线程：
+
+    1. 在有了多线程模型之后，有了一种新的元素：并行实体共享同一个地址空间和所有可用数据的能力。对于某些应用而言，这种能力是必须的，而这正是多进程模型（它们具有不同地址空间）所无法表达的。
+    2. 由于线程比进程更轻量级，所以它们比进程更容易（更快）创建也更容易撤销。在许多系统中，创建一个线程比创建一个进程要快 10 ～ 100 倍。
+    3. 分派线程：
+
+        ```c
+        while(TRUE) {
+            get_next_request(&buf);
+            handoff_work(&buf);
+        }
+        ```
+
+    4. 工作线程
+
+        ```c
+        while(TRUE) {
+            wait_for_work(&buf)
+            look_for_page_in_cache(&buf, &page);
+            if (page_not_in_cache(&page))
+                read_page_from_disk(&buf, &page);
+            return_page(&page)
+        }
+        ```
+
+    5. 有限状态机：每个计算都有一个倍保存的状态，存在一个会发生且使得相关状态发生改变的事件集合，这类设计称为有限状态机。
+    6. 构造服务器的三种模型：
+        1. 多线程：并行性、阻塞系统调用
+        2. 单线程进程：无并行性、阻塞系统调用
+        3. 有限状态机：并行性、非阻塞系统调用、中断
+    7. 经典的线程模型：
