--- a/书籍/现代操作系统.md
+++ b/书籍/现代操作系统.md
@@ -143,3 +143,14 @@
         2. 单线程进程：无并行性、阻塞系统调用
         3. 有限状态机：并行性、非阻塞系统调用、中断
     7. 经典的线程模型：
+        1. 进程模型基于两种独立的概念：资源分组处理与执行。
+        2. 进程有存放程序正文和数据以及其他资源的地址空间。这些资源包括打开的文件、子进程、即将发生的报警、信号处理程序、账号的信息等。
+        3. 进程拥有一个执行的线程，通常简写为线程。
+        4. 在线程中有一个程序计数器，用来记录接着要执行哪一条指令。
+        5. 线程拥有寄存器，用来保存线程当前的工作变量。
+        6. 线程还拥有一个堆栈，用来记录执行历史，其中每一帧保存了一个已调用但是还没有从中返回的过程。
+        7. 线程给进程模型增加了一项内容，即在同一个进程环境中，允许彼此之间有较大独立性的多个线程执行。
+        8. 多线程这个术语，用来描述在同一个进程中允许多个线程的情形。
+        9. 进程中的不同线程不像不同进程之间那样存在很大的独立性。所有的线程都有完全一样的地址空间，这意味着它们也共享同样的全局变量。
+        10. 线程的状态：运行、阻塞、就绪或终止。
+    8. POSIX线程
