--- a/阅读笔记/现代操作系统.md
+++ b/阅读笔记/现代操作系统.md
@@ -154,3 +154,14 @@
         9. 进程中的不同线程不像不同进程之间那样存在很大的独立性。所有的线程都有完全一样的地址空间，这意味着它们也共享同样的全局变量。
         10. 线程的状态：运行、阻塞、就绪或终止。
     8. POSIX线程
+    9. 在用户空间中实现线程：有两种主要的方法实现线程包，在用户空间和在内核中。第一种方法是把整个线程包放在用户空间中，内核对线程包一无所知。
+    10. 在用户空间管理线程时，每个进程需要有其专用的线程表，用来跟踪该进程中的线程。这些表和进程表类似，不过它仅仅记录各个线程的属性，如每个线程的程序计数器、堆栈、指针、寄存器和状态等。该线程表由运行时系统管理。
+    11. 在内核中实现线程：不再需要运行时系统了，每个进程中也没有线程表。相反，在内核中有用来记录系统中所有线程的线程表。
+    12. 当某个线程希望创建一个新线程或撤销一个已有线程时，它进行一个系统调用，这个系统调用通过对线程表的更新完成线程的创建或撤销工作。
+    13. 内核的线程表保存了每个线程的寄存器、状态和其他信息。
+    14. 在内核中实现线程，所有能够阻塞线程的调用都以系统调用的形式实现，与运行时系统相比，代价更小。
+    15. 在内核中创建或撤销线程的代价比较大，更好的处理方式是回收。
+    16. 内核级线程在一些关键点上优于用户级线程，但是内核级线程的速度慢。
+    17. 调度程序激活机制
+    18. 弹出式线程
+    19. 
