--- a/阅读笔记/现代操作系统.md
+++ b/阅读笔记/现代操作系统.md
@@ -164,4 +164,13 @@
     16. 内核级线程在一些关键点上优于用户级线程，但是内核级线程的速度慢。
     17. 调度程序激活机制
     18. 弹出式线程
-    19. 
+
+3. 进程间通信：
+   1. 竞争条件：两个或多个进程读写某些共享数据，而最后的结果取决于进程运行的精确时序，称为竞争条件。
+   2. 怎样避免竞争条件：互斥，以某种手段确保当一个进程在使用一个共享变量或文件时，其他进程不能做同样的操作。
+   3. 临界区：我们把对共享内存进行访问的程序片段称作临界区。如果我们能够适当安排，使得两个进程不可能同时处于临界区中，就能够避免竞争条件。
+   4. 一个好的解决方案需要满足下面4个条件：
+      1. 任何两个进程不能同时处于临界区
+      2. 不应对CPU的速度和数量做任何假设
+      3. 临界区对运行的进程不得阻塞其他进程
+      4. 不得使进程无限期等待进入临界区
