--- a/阅读笔记/现代操作系统.md
+++ b/阅读笔记/现代操作系统.md
@@ -153,7 +153,7 @@
         8. 多线程这个术语，用来描述在同一个进程中允许多个线程的情形。
         9. 进程中的不同线程不像不同进程之间那样存在很大的独立性。所有的线程都有完全一样的地址空间，这意味着它们也共享同样的全局变量。
         10. 线程的状态：运行、阻塞、就绪或终止。
-    8. POSIX线程
+    8. POSIX 线程
     9. 在用户空间中实现线程：有两种主要的方法实现线程包，在用户空间和在内核中。第一种方法是把整个线程包放在用户空间中，内核对线程包一无所知。
     10. 在用户空间管理线程时，每个进程需要有其专用的线程表，用来跟踪该进程中的线程。这些表和进程表类似，不过它仅仅记录各个线程的属性，如每个线程的程序计数器、堆栈、指针、寄存器和状态等。该线程表由运行时系统管理。
     11. 在内核中实现线程：不再需要运行时系统了，每个进程中也没有线程表。相反，在内核中有用来记录系统中所有线程的线程表。
@@ -166,11 +166,19 @@
     18. 弹出式线程
 
 3. 进程间通信：
-   1. 竞争条件：两个或多个进程读写某些共享数据，而最后的结果取决于进程运行的精确时序，称为竞争条件。
-   2. 怎样避免竞争条件：互斥，以某种手段确保当一个进程在使用一个共享变量或文件时，其他进程不能做同样的操作。
-   3. 临界区：我们把对共享内存进行访问的程序片段称作临界区。如果我们能够适当安排，使得两个进程不可能同时处于临界区中，就能够避免竞争条件。
-   4. 一个好的解决方案需要满足下面4个条件：
-      1. 任何两个进程不能同时处于临界区
-      2. 不应对CPU的速度和数量做任何假设
-      3. 临界区对运行的进程不得阻塞其他进程
-      4. 不得使进程无限期等待进入临界区
+    1. 竞争条件：两个或多个进程读写某些共享数据，而最后的结果取决于进程运行的精确时序，称为竞争条件。
+    2. 怎样避免竞争条件：互斥，以某种手段确保当一个进程在使用一个共享变量或文件时，其他进程不能做同样的操作。
+    3. 临界区：我们把对共享内存进行访问的程序片段称作临界区。如果我们能够适当安排，使得两个进程不可能同时处于临界区中，就能够避免竞争条件。
+    4. 一个好的解决方案需要满足下面 4 个条件：
+        1. 任何两个进程不能同时处于临界区
+        2. 不应对 CPU 的速度和数量做任何假设
+        3. 临界区对运行的进程不得阻塞其他进程
+        4. 不得使进程无限期等待进入临界区
+    5. 忙等待的互斥：
+        1. 屏蔽中断：在单处理器系统中，最简单的方法是使每个进程在刚刚进入临界区后立即屏蔽所有中断，并在离开之前再打开中断。屏蔽中断后，时钟中断也被屏蔽。CPU只有发生时钟中断或其他中断时才会进行进程切换，这样，在屏蔽中断之后CPU将不会被切换到其他进程。一旦某个进程屏蔽中断之后，它就可以检查和修改共享内存，而不必担心其他进程介入。屏蔽中断对于操作系统本身而言是一项很有用的技术，但对于用户进程则不是一种合适的通用互斥机制。
+        2. 锁变量：设置一个共享变量，其初始值为0.当这个进程想进入其临界区时，就先测试这把锁。如果该锁的值为0，则该进程将其设为1并进入临界区。若这把锁的值已经是1，则等待直到其变为0。这种方案于假脱机目录存在一样的疏漏，还是会发生竞争条件。
+        3. 严格轮换法：设置一个整型变量turn，初始值为0，用于记录轮到哪个进程进入临界区，并检查或更新共享内存。开始时，进程0检查turn，发现其值为0，于是进入临界区。进程1也发现其值为0，所以在一个等待循环中不停地测试turn，看其值何时变为1.连续测试一变量直到某个值出现为止，称为**忙等待**。用于忙等待的锁，称为**自旋锁(spin lock)**。
+           1. 由于这种方式浪费CPU时间，所以通常应该避免。
+           2. 在一个进程比另一个进程慢了很多的情况下，轮流进入临界区并不是一个好办法。
+           3. 这一方案虽然完全避免了所有的竞争条件，但是不满足条件3`临界区对运行的进程不得阻塞其他进程`，因此也不是一个很好的方案。
+        4. Peterson解法
