--- a/学习笔记/2019/0610-0616.md
+++ b/学习笔记/2019/0610-0616.md
@@ -25,3 +25,15 @@
 `Promise.allSettled` gives you a signal when all the input promises are settled, which means they’re either fulfilled or rejected. This is useful in cases where you don’t care about the state of the promise, you just want to know when the work is done, regardless of whether it was successful.
 
 `Promise.any` gives you a signal as soon as one of the promises fulfills. This is similar to Promise.race, except any doesn’t reject early when one of the promises rejects.
+
+---
+
+**[7 absolute truths I unlearned as junior developer](https://monicalent.com/blog/2019/06/03/absolute-truths-unlearned-as-junior-developer/?utm_source=hackernewsletter&utm_medium=email&utm_term=fav)**
+
+1. I’m a senior developer
+2. Everyone writes tests
+3. We’re so far behind everyone else (AKA “tech FOMO”)
+4. Code quality matters most
+5. Everything must be documented!!!!
+6. Technical debt is bad
+7. Seniority means being the best at programming
