--- a/阅读笔记/现代操作系统.md
+++ b/阅读笔记/现代操作系统.md
@@ -181,4 +181,9 @@
            1. 由于这种方式浪费CPU时间，所以通常应该避免。
            2. 在一个进程比另一个进程慢了很多的情况下，轮流进入临界区并不是一个好办法。
            3. 这一方案虽然完全避免了所有的竞争条件，但是不满足条件3`临界区对运行的进程不得阻塞其他进程`，因此也不是一个很好的方案。
-        4. Peterson解法
+        4. Peterson解法：一种不需要严格轮换的软件互斥算法。
+        5. TSL指令
+        6. XCHG指令
+        7. Peterson解法和TSL指令或XCHG解法都是正确的，但它们都有忙等待的缺点。这些解法在本质上是这样的，当一个进程想进入临界区时，先检查是否允许进入。若不允许，则该进程将原地等待，直到允许为止。这种方法不仅浪费了CPU时间，而且还可能引起预想不到的结果。例如优先级反转问题
+        8. 生产者-消费者问题，有界缓冲区问题。
+        9. 信号量
