--- a/学习笔记/2019/0617-0623.md
+++ b/学习笔记/2019/0617-0623.md
@@ -8,3 +8,156 @@
 6. They are hard to compose
 7. They can’t just be dropped into an application
 8. Framework agnostic components without web components
+
+---
+
+**[V8 release v7.6](https://v8.dev/blog/v8-release-76)**
+
+1. `JSON.parse` improvements
+2. Frozen/sealed array improvements: Performance of calls on frozen or sealed arrays (and array-like objects) received numerous improvements.
+3. JavaScript language features:
+    1. `Promise.allSettled`
+    2. `Improved BigInt support`: 在 JavaScript 中，Number 可以准确表达的最大数字是 2^53-1，大于等于 2^53 的所有数字可以使用 BigInt 表达。可以这样定义一个 BigInt 变量：在一个整数字面量后面加 n，如：10n，或者调用函数 BigInt()。
+    3. `Intl.DateTimeFormat` improvements
+
+---
+
+**[5 ES2019 features you can use today](https://blog.logrocket.com/5-es2019-features-you-can-use-today/)**
+
+1. `Object.fromEntries()`: The Object.fromEntries() method is currently a stage 4 proposal, which means it’s ready for inclusion in the ES2019 standard.
+    ```javascript
+    const obj = { one: 1, two: 2, three: 3 };
+
+    console.log(Object.entries(obj));  
+    // => [["one", 1], ["two", 2], ["three", 3]]
+
+    const myArray = [['one', 1], ['two', 2], ['three', 3]];
+    const obj = Object.fromEntries(myArray);
+
+    console.log(obj);    // => {one: 1, two: 2, three: 3}
+
+    ```
+    ```javascript
+    // previous
+    const myArray = [['one', 1], ['two', 2], ['three', 3]];
+    const obj = Array.from(myArray).reduce((acc, [key, val]) => Object.assign(acc, {[key]: val}), {});
+
+    console.log(obj);    // => {one: 1, two: 2, three: 3}
+    ```
+    ```javascript
+    //  the argument passed to Object.fromEntries()can be any object that implements the iterable protocol as long as it returns a two-element, array-like object.
+    const map = new Map();
+    map.set('one', 1);
+    map.set('two', 2);
+
+    const obj = Object.fromEntries(map);
+
+    console.log(obj);    // => {one: 1, two: 2}
+    ```
+    ```javascript
+    // The Object.fromEntries() method is also very useful for transforming objects
+    const obj = {a: 4, b: 9, c: 16};
+
+    // convert the object into an array
+    const arr = Object.entries(obj);
+
+    // get the square root of the numbers
+    const map = arr.map(([key, val]) => [key, Math.sqrt(val)]);
+
+    // convert the array back to an object
+    const obj2 = Object.fromEntries(map);
+
+    console.log(obj2);  // => {a: 2, b: 3, c: 4}
+    ```
+    ```javascript
+    // Another situation in which Object.fromEntries() comes in handy is when working with the query string of a URL
+    const paramsString = 'param1=foo&param2=baz';
+    const searchParams = new URLSearchParams(paramsString);
+
+    Object.fromEntries(searchParams);    // => {param1: "foo", param2: "baz"}
+    ```
+
+2. `trimStart()` and `trimEnd()`: These methods are currently stage 4 proposals and will be added to the specification for consistency with padStart() and padEnd().
+    ```javascript
+    const str = "   string   ";
+
+    // es2019
+    console.log(str.trimStart());    // => "string   "
+    console.log(str.trimEnd());      // => "   string"
+
+    // the same as
+    console.log(str.trimLeft());     // => "string   "
+    console.log(str.trimRight());    // => "   string"
+
+    // For web compatibility, trimLeft() and trimRight() will remain as aliases for trimStart() and trimEnd().
+    ```
+
+3. `flat()` and `flatMap()`: The flat() method enables you to easily concatenate all sub-array elements of an array.The flat() and flatMap() methods are currently stage 4 proposals.
+    ```javascript
+    const arr = ['a', 'b', ['c', 'd']];
+    const flattened = arr.flat();
+
+    console.log(flattened);    // => ["a", "b", "c", "d"]
+    ```
+
+    Previously, you’d have to use reduce() or concat() to get a flat array:
+    ```javascript
+    const arr = ['a', 'b', ['c', 'd']];
+    const flattened = [].concat.apply([], arr);
+
+    // or
+    // const flattened =  [].concat(...arr);
+
+    console.log(flattened);    // => ["a", "b", "c", "d"]
+    ```
+
+    flat() also accepts an optional argument that specifies the number of levels a nested array should be flattened. If no argument is provided, the default value of 1 will be used:
+    ```javascript
+    const arr = [10, [20, [30]]];
+
+    console.log(arr.flat());     // => [10, 20, [30]]
+    console.log(arr.flat(1));    // => [10, 20, [30]]
+    console.log(arr.flat(2));    // => [10, 20, 30]
+    ```
+
+    The flatMap() method combines map() and flat() into one method.
+    ```javascript
+    const arr = [4.25, 19.99, 25.5];
+
+    console.log(arr.map(value => [Math.round(value)]));    
+    // => [[4], [20], [26]]
+
+    console.log(arr.flatMap(value => [Math.round(value)]));    
+    // => [4, 20, 26]
+    ```
+
+    The depth level that the array will be flattened is 1. If you want to remove an item from the result, simply return an empty array.
+    ```javascript
+    const arr = [[7.1], [8.1], [9.1], [10.1], [11.1]];
+
+    // do not include items bigger than 9
+    arr.flatMap(value => {
+        if (value >= 10) {
+            return [];
+        } else {
+            return Math.round(value);
+        }
+    });  
+
+    // returns:
+    // => [7, 8, 9]
+    ```
+
+4. Description property for Symbol objects: This ES2019 proposal adds a read-only description property to the Symbol object, which returns a string containing the description of the Symbol.
+    ```javascript
+    let sym = Symbol('foo');
+    console.log(sym.description);    // => foo
+
+    sym = Symbol();
+    console.log(sym.description);    // => undefined
+
+    // create a global symbol
+    sym = Symbol.for('bar');
+    console.log(sym.description);    // => bar
+    ```
+5. Optional catch binding
