--- a/阅读笔记/现代操作系统.md
+++ b/阅读笔记/现代操作系统.md
@@ -175,15 +175,30 @@
         3. 临界区对运行的进程不得阻塞其他进程
         4. 不得使进程无限期等待进入临界区
     5. 忙等待的互斥：
-        1. 屏蔽中断：在单处理器系统中，最简单的方法是使每个进程在刚刚进入临界区后立即屏蔽所有中断，并在离开之前再打开中断。屏蔽中断后，时钟中断也被屏蔽。CPU只有发生时钟中断或其他中断时才会进行进程切换，这样，在屏蔽中断之后CPU将不会被切换到其他进程。一旦某个进程屏蔽中断之后，它就可以检查和修改共享内存，而不必担心其他进程介入。屏蔽中断对于操作系统本身而言是一项很有用的技术，但对于用户进程则不是一种合适的通用互斥机制。
-        2. 锁变量：设置一个共享变量，其初始值为0.当这个进程想进入其临界区时，就先测试这把锁。如果该锁的值为0，则该进程将其设为1并进入临界区。若这把锁的值已经是1，则等待直到其变为0。这种方案于假脱机目录存在一样的疏漏，还是会发生竞争条件。
-        3. 严格轮换法：设置一个整型变量turn，初始值为0，用于记录轮到哪个进程进入临界区，并检查或更新共享内存。开始时，进程0检查turn，发现其值为0，于是进入临界区。进程1也发现其值为0，所以在一个等待循环中不停地测试turn，看其值何时变为1.连续测试一变量直到某个值出现为止，称为**忙等待**。用于忙等待的锁，称为**自旋锁(spin lock)**。
-           1. 由于这种方式浪费CPU时间，所以通常应该避免。
-           2. 在一个进程比另一个进程慢了很多的情况下，轮流进入临界区并不是一个好办法。
-           3. 这一方案虽然完全避免了所有的竞争条件，但是不满足条件3`临界区对运行的进程不得阻塞其他进程`，因此也不是一个很好的方案。
-        4. Peterson解法：一种不需要严格轮换的软件互斥算法。
-        5. TSL指令
-        6. XCHG指令
-        7. Peterson解法和TSL指令或XCHG解法都是正确的，但它们都有忙等待的缺点。这些解法在本质上是这样的，当一个进程想进入临界区时，先检查是否允许进入。若不允许，则该进程将原地等待，直到允许为止。这种方法不仅浪费了CPU时间，而且还可能引起预想不到的结果。例如优先级反转问题
+        1. 屏蔽中断：在单处理器系统中，最简单的方法是使每个进程在刚刚进入临界区后立即屏蔽所有中断，并在离开之前再打开中断。屏蔽中断后，时钟中断也被屏蔽。CPU 只有发生时钟中断或其他中断时才会进行进程切换，这样，在屏蔽中断之后 CPU 将不会被切换到其他进程。一旦某个进程屏蔽中断之后，它就可以检查和修改共享内存，而不必担心其他进程介入。屏蔽中断对于操作系统本身而言是一项很有用的技术，但对于用户进程则不是一种合适的通用互斥机制。
+        2. 锁变量：设置一个共享变量，其初始值为 0.当这个进程想进入其临界区时，就先测试这把锁。如果该锁的值为 0，则该进程将其设为 1 并进入临界区。若这把锁的值已经是 1，则等待直到其变为 0。这种方案于假脱机目录存在一样的疏漏，还是会发生竞争条件。
+        3. 严格轮换法：设置一个整型变量 turn，初始值为 0，用于记录轮到哪个进程进入临界区，并检查或更新共享内存。开始时，进程 0 检查 turn，发现其值为 0，于是进入临界区。进程 1 也发现其值为 0，所以在一个等待循环中不停地测试 turn，看其值何时变为 1.连续测试一变量直到某个值出现为止，称为**忙等待**。用于忙等待的锁，称为**自旋锁(spin lock)**。
+            1. 由于这种方式浪费 CPU 时间，所以通常应该避免。
+            2. 在一个进程比另一个进程慢了很多的情况下，轮流进入临界区并不是一个好办法。
+            3. 这一方案虽然完全避免了所有的竞争条件，但是不满足条件 3`临界区对运行的进程不得阻塞其他进程`，因此也不是一个很好的方案。
+        4. Peterson 解法：一种不需要严格轮换的软件互斥算法。
+        5. TSL 指令
+        6. XCHG 指令
+        7. Peterson 解法和 TSL 指令或 XCHG 解法都是正确的，但它们都有忙等待的缺点。这些解法在本质上是这样的，当一个进程想进入临界区时，先检查是否允许进入。若不允许，则该进程将原地等待，直到允许为止。这种方法不仅浪费了 CPU 时间，而且还可能引起预想不到的结果。例如优先级反转问题
         8. 生产者-消费者问题，有界缓冲区问题。
         9. 信号量
+            1. 一个信号量的取值可以为 0（表示没有保存下来的唤醒操作），或者为正值（表示有一个或多个唤醒操作）。
+            2. 检查数值、修改变量值以及可能发生的睡眠操作均为一个点一的、不可分割的原子操作完成。保证一个信号量在完成或阻塞之前，其他进程均不允许访问该信号量。这种原子性对于解决同步问题和避免竞争条件是绝对必要的。
+            3. 原子操作：所谓原子操作，是指一组相关联的操作要么都不间断的执行，要么都不执行。
+            4. 信号量的另一种用途是用于实现同步。
+        10. 互斥量
+            1. 如果不需要信号量的计数能力，有时可以使用信号量的一个简化版本，成为互斥量。
+            2. 互斥量仅仅适用于管理共享资源或一小段代码。
+            3. 互斥量是一个可以处于两态之一的变量：解锁和加锁。
+            4. 如果进程有不连续的空间地址，如何共享变量？
+                1. 有些共享数据结构，例如信号量，可以放在内核中，并且只能通过系统调用来访问。
+                2. 多数现代操作系统提供一种方法，让进程与其他进程共享其部分地址空间。这种方法中，缓冲区和其他数据结构可以共享。最坏的情况下，如果没有共享的途径，则可以共享文件。
+            5. Pthread 中的互斥：Pthread 提供许多可以用来同步线程的函数。其基本机制是使用一个可以被锁定和解锁的互斥量来保护每个临界区。一个线程如果想要进入临界区，它首先尝试锁住相关互斥量。如果互斥量没有加锁，那么这个线程可以立即进入，并且该互斥量被自动锁定以防止其他线程进入。如果互斥量已被加锁，则调用线程被阻塞，直到该互斥量被解锁。如果多个线程在等待同一个互斥量，当它被解锁时，这些等待的线程中只有一个被允许并将互斥量重新锁定。这些互斥锁不是强制性的，而是由程序员来保证线程正确地使用它们。
+            6. 除互斥量之外，pthread提供了另一种同步机制：条件变量。互斥量在允许或阻塞对临界区的访问上是很有用的，条件变量则允许线程由于一些未达到的条件而阻塞。
+            7. 条件变量不会存在内存中。如果将一个信号量传递给一个没有线程在等待的条件变量，那么这个信号就会丢失。
+        11. 管程
