--- a/学习笔记/2019/0624-0630.md
+++ b/学习笔记/2019/0624-0630.md
@@ -28,3 +28,43 @@
 7. Cross-office, Cross-timezone Reviews:
     - **Good code reviews** account for the timezone difference when they can. Reviewers aim to review the code in the overlapping time between offices, assuming there are a few hours. 
     - **Better code reviews** notice when code reviews repeatedly run into timezone issues and look for a systemic solution, outside the code review framework.
+
+---
+
+**[Understanding Worker Threads in Node.js](https://nodesource.com/blog/worker-threads-nodejs)**
+
+When a Node.js process is launched, it runs:
+
+- One process: a process is a global object that can be accessed anywhere and has information about what’s being executed at a time.
+- One thread: being single-threaded means that only one set of instructions is executed at a time in a given process.
+- One event loop: this is one of the most important aspects to understand about Node. It’s what allows Node to be asynchronous and have non-blocking I/O, — despite the fact that JavaScript is single-threaded — by offloading operations to the system kernel whenever possible through callbacks, promises and async/await.
+- One JS Engine Instance: this is a computer program that executes JavaScript code.
+- One Node.js Instance: the computer program that executes Node.js code.
+
+The code of Node.js is NOT executed in parallel. Only I/O operations are run in parallel, because they are executed asynchronously.
+
+So Worker Threads will not help much with I/O-intensive work because asynchronous I/O operations are more efficient than Workers can be. The main goal of Workers is to improve the performance on CPU-intensive operations not I/O operations.
+
+The best solution for CPU performance is Worker Threads.
+
+Worker threads have:
+- One process
+- Multiple threads
+- One event loop per thread
+- One JS Engine Instance per thread
+- One Node.js Instance per thread
+
+The `worker_threads` module enables the use of threads that execute JavaScript in parallel. To access it:
+```javascript
+const worker = require('worker_threads');
+```
+
+What is expected for Workers (hopefully):
+- Passing native handles around (e.g. sockets, http request)
+- Deadlock detection. Deadlock is a situation where a set of processes are blocked because each process is holding a resource and waiting for another resource acquired by some other process. Deadlock detention will be useful for Worker threads in this case.
+- More isolation, so if one process is affected, it won’t affect others.
+
+What NOT to expect for Workers:
+- Don’t think Workers make everything magically faster, in some cases is better to use Worker pool
+- Don’t use Workers for parallelizing I/O operations.
+- Don’t think spawning Workers is cheap
