--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -126,7 +126,19 @@
                 1. 有些共享数据结构，例如信号量，可以放在内核中，并且只能通过系统调用来访问。
                 2. 多数现代操作系统提供一种方法，让进程与其他进程共享其部分地址空间。这种方法中，缓冲区和其他数据结构可以共享。最坏的情况下，如果没有共享的途径，则可以共享文件。
             5. Pthread 中的互斥：Pthread 提供许多可以用来同步线程的函数。其基本机制是使用一个可以被锁定和解锁的互斥量来保护每个临界区。一个线程如果想要进入临界区，它首先尝试锁住相关互斥量。如果互斥量没有加锁，那么这个线程可以立即进入，并且该互斥量被自动锁定以防止其他线程进入。如果互斥量已被加锁，则调用线程被阻塞，直到该互斥量被解锁。如果多个线程在等待同一个互斥量，当它被解锁时，这些等待的线程中只有一个被允许并将互斥量重新锁定。这些互斥锁不是强制性的，而是由程序员来保证线程正确地使用它们。
-            6. 除互斥量之外，pthread提供了另一种同步机制：条件变量。互斥量在允许或阻塞对临界区的访问上是很有用的，条件变量则允许线程由于一些未达到的条件而阻塞。
+            6. 除互斥量之外，pthread 提供了另一种同步机制：条件变量。互斥量在允许或阻塞对临界区的访问上是很有用的，条件变量则允许线程由于一些未达到的条件而阻塞。
             7. 条件变量不会存在内存中。如果将一个信号量传递给一个没有线程在等待的条件变量，那么这个信号就会丢失。
         11. 管程
             1. 死锁：两个进程都永久的阻塞下去，无法再进行有效的工作。
+            2. 管程有一个很重要的特性，即任意时刻管程中只能有一个活跃进程，这一特性使管程能有效的完成互斥。
+            3. 当一个进程调用管程过程时，该过程中的前几条指令将检查在管程中是否有其他活跃进程。如果有，调用进程将被挂起，直到另一个进程离开管程将其唤醒。如果没有活跃进程在使用管程，则该调用进程可以进入。
+            4. 进入管程时的互斥由编译器负责，但通常的做法是用一个互斥量或二元信号量。因为是编译器而非程序员来安排互斥，所以出错的可能性要小的多。
+            5. 通过临界区互斥的自动化，管程比信号量更容易保证并行编程的正确性。
+        12. 消息传递
+            1. 这种进程间通信的方法使用两条原语，send 和 receive，它们像信号量而不像管程，是系统调用而不是语言成分
+            2. 消息传递系统的设计要点：
+                1. 消息有可能被网络丢失。接收方在接收到消息的时候立刻回送一条确认消息。如果发送方在一段时间间隔没有收到消息，则重发消息。
+                2. 消息有可能本身被正确接收，而返回给发送者的确认信息丢失，发送者将重发消息，这样接收者将接收到两次相同的消息。对于接收者来说，如何区分新的消息和重发的老消息非常重要。通常采用在每条原始消息中嵌入一个连续的序号来解决此类问题。如果接收者收到一条消息，它具有与前面某一条消息一样的序号，就知道这条消息是重复的，可以忽略。
+                3. 消息系统还需要解决进程命名的问题，在 send 和 receive 调用中所指定的进程必须是没有二义性的。
+                4. 消息系统的身份认证问题。客户机怎么直到它是与一个真正的文件服务器通信，而不是与一个冒充者通信。
+            3. 用消息传递解决生产者-消费者问题
