--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -93,6 +93,7 @@
     18. 弹出式线程
 
 3. 进程间通信：
+
     1. 竞争条件：两个或多个进程读写某些共享数据，而最后的结果取决于进程运行的精确时序，称为竞争条件。
     2. 怎样避免竞争条件：互斥，以某种手段确保当一个进程在使用一个共享变量或文件时，其他进程不能做同样的操作。
     3. 临界区：我们把对共享内存进行访问的程序片段称作临界区。如果我们能够适当安排，使得两个进程不可能同时处于临界区中，就能够避免竞争条件。
@@ -142,3 +143,19 @@
                 3. 消息系统还需要解决进程命名的问题，在 send 和 receive 调用中所指定的进程必须是没有二义性的。
                 4. 消息系统的身份认证问题。客户机怎么直到它是与一个真正的文件服务器通信，而不是与一个冒充者通信。
             3. 用消息传递解决生产者-消费者问题
+        13. 屏障：该同步机制是准备用于进程组而不是用于双进程的生产者-消费者类情形的。在有些应用中划分了若干阶段，并且规定，除非所有的进程都就绪准备着手下一个阶段，否则任何进程都不能进入下一个阶段。可以通过在每个阶段的结尾安置屏障来实现这种行为。当一个进程到达屏障时，它就被屏障阻拦，直到所有进程都到达该屏障为止。
+
+4. 调度
+    1. 调度程序：当计算机系统是多道程序设计系统时，通常就会有多个进程或线程同时竞争 CPU。只要有两个或多个进程处于就绪状态，这种情形就会发生。如果只有一个 CPU 可用，那么就必须选择下一个要运行的进程。在操作系统中，完成选择工作的这一部分称为调度程序。许多适用于进程调度的处理方法也同样适用于线程调度。
+    2. 调度算法：调度程序使用的算法。
+    3. 调度程序需要考虑 CPU 的利用率，因为进程切换的代价是比较高的：用户态必须切到内核态，然后要保存当前进程的状态，包括在进程表中存储寄存器以便以后重新装载。在许多系统中，内存映像也必须保存。然后通过调度算法选定一个新的进程，将该进程的内存映像重新装入 MMU，最后新进程开始运行。除此之外，进程切换还要使整个内存高速缓存失效，强迫缓存从内存中动态重新装入两次（进入内核一次，离开内核一次）。如果每秒钟切换进程的次数太多，会耗费大量 CPU 时间。
+    4. 进程行为：几乎所有进程的 I/O 请求或计算都是交替突发的。CPU 不停顿地运行一段时间，然后发出一个系统调用以便读写文件。在完成系统调用之后，CPU 又开始计算，直到它需要读更多的数据或写更多的数据为止。
+    5. 计算密集型：进程花费了绝大多数时间在计算上。
+    6. I/O 密集型：进程在等待 I/O 上花费了绝大多数时间。
+    7. 随着 CPU 变得越来越快，更多的进程倾向于 I/O 密集型。
+    8. 何时进行调度决策：
+        1. 在创建一个新进程之后，需要决定是运行父进程还是运行子进程。由于这两种进程都处于就绪状态，所以这是一种正常的调度决策，可以任意决定，也就是说，调度程序可以合法选择先运行父进程还是先运行子进程。
+        2. 在一个进程退出时必须做出调度决策。如果没有就绪的进程，通常会运行一个系统提供的空闲进程。
+        3. 当一个进程阻塞在 I/O 和信号量上或由于其他原因阻塞时，必须选择另一个进程运行。
+        4. 在一个 I/O 中断发生时，必须做出调度决策。
+    9. 调度算法分类
