--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -159,3 +159,25 @@
         3. 当一个进程阻塞在 I/O 和信号量上或由于其他原因阻塞时，必须选择另一个进程运行。
         4. 在一个 I/O 中断发生时，必须做出调度决策。
     9. 调度算法分类
+        1. 批处理：在批处理系统中，不会有用户不耐烦的在终端旁等待一个短请求的快捷响应。因此，非抢占式算法，或对每个进程都有长时间的抢占式算法，通常都可以接受。
+        2. 交互式：在交互式用户环境中，为了避免一个进程霸占 CPU 拒绝为其他进程服务，抢占是必须的。
+        3. 实时：抢占有时是不需要的，因为进程了解它们可能长时间得不到运行，所以通常很快的完成各自的工作并阻塞。
+    10. 调度算法的目标：
+        1. 所有系统：
+            - 公平：给每个进程公平的 CPU 份额
+            - 策略强制执行：看到所宣布的策略执行
+            - 平衡：保持系统的所有部分都忙碌
+        2. 批处理系统：
+            - 吞吐量：每小时最大作业数
+            - 周转时间：从提交到终止间的最小时间
+            - CPU 利用率：保持 CPU 始终忙碌
+        3. 交互式系统：
+            - 响应时间：快速满足响应请求
+            - 均衡性：满足用户的期望
+        4. 实时系统：
+            - 满足截止时间：避免丢失数据
+            - 可预测性：在多媒体系统中避免品质降低
+    11. 批处理系统中的调度
+        1. 先来先服务：在所有调度算法中，最简单的是非抢占式的先来先服务算法。使用该算法，进程按照它们请求CPU的顺序使用CPU。
+        2. 最短作业优先：适用于运行时间可以预知的非抢占式的批处理调度算法。只有在所有的作业都可同时运行的情形下，最短作业优先算法才是最优化的。
+        3. 最短剩余时间优先：
