--- a/学习笔记/2019/0701-0707.md
+++ b/学习笔记/2019/0701-0707.md
@@ -74,3 +74,12 @@
 
 13. Design for the developers
     Make sure your API and "component experience" is optimized for the people that will use it - your fellow developers.
+
+---
+
+**[Migrate your Flutter App to Flutter](https://medium.com/flutter-community/migrate-your-flutter-app-to-flutter-web-4bd3c9b3e81d)**
+
+Limitations as of now:
+1. There is no way as of this moment to directly generate the web build without making changes which would affect the mobile versions. For example,(shown below) packages across the code need to be changed for the web version.
+2. Libraries that are mobile-specific like `cupertino_icons` needs to be manually removed from `pubspec` and cannot be handled in real time.
+3. Chromium-based browsers and Safari is supported and tested as of now, Firefox and Edge will be supported completely, but testing on them now is limited. IE support is not planned.
