--- a/学习笔记/2019/0701-0707.md
+++ b/学习笔记/2019/0701-0707.md
@@ -83,3 +83,31 @@ Limitations as of now:
 1. There is no way as of this moment to directly generate the web build without making changes which would affect the mobile versions. For example,(shown below) packages across the code need to be changed for the web version.
 2. Libraries that are mobile-specific like `cupertino_icons` needs to be manually removed from `pubspec` and cannot be handled in real time.
 3. Chromium-based browsers and Safari is supported and tested as of now, Firefox and Edge will be supported completely, but testing on them now is limited. IE support is not planned.
+
+---
+
+**[What I Learned Co-Founding Dribbble](https://medium.com/dribbble/what-i-learned-co-founding-dribbble-8680f6816e3d)**
+
+1. Choose your partner wisely
+2. Start with a t-shirt
+3. Your first 100 members are critical
+4. Pave the cowpaths
+5. Don’t be afraid to throw things away
+6. Persistent iteration over flashy launches: When designing for a community, building trust and a place that’s comfortable for folks to come back to every day is essential, especially when just starting out.
+7. Not knowing what you’re doing is okay: Having the ability to laugh at your mistakes while at the same time being unafraid of jumping into things you don’t know how to do is an incredibly powerful quality. And I think it’s crucial for people to have that when creating and running businesses.
+8. Grow thick skin. Quickly.
+   1. Learn who to ignore
+   2. Celebrate the positive
+9. Trends come and go and come back again
+10. Everything is temporary and that’s ok: Another reason not to get hung up on whether something’s trendy or not: It’s all temporary anyway.
+11. People and relationships are what’s most important
+12. Stay sharp with side projects
+13. Don’t be superstitious
+14. Find a good lawyer and accountant
+15. Identify when you’re being stubborn
+16. Write, teach, and share what you’re learning
+17. Don’t take funding
+18. Take care of yourself first
+19. Knowing when to let go
+
+
