--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -178,6 +178,26 @@
             - 满足截止时间：避免丢失数据
             - 可预测性：在多媒体系统中避免品质降低
     11. 批处理系统中的调度
-        1. 先来先服务：在所有调度算法中，最简单的是非抢占式的先来先服务算法。使用该算法，进程按照它们请求CPU的顺序使用CPU。
+        1. 先来先服务：在所有调度算法中，最简单的是非抢占式的先来先服务算法。使用该算法，进程按照它们请求 CPU 的顺序使用 CPU。
         2. 最短作业优先：适用于运行时间可以预知的非抢占式的批处理调度算法。只有在所有的作业都可同时运行的情形下，最短作业优先算法才是最优化的。
-        3. 最短剩余时间优先：
+        3. 最短剩余时间优先：最短作业优先的抢占式版本是最短剩余时间优先算法。使用这个算法，调度程序总是选择剩余时间最短的那个进程运行。当一个新的作业到达时，其整个时间同当前进程的剩余时间作比较，如果新的进程比当前运行进程需要更少的时间，当前进程就被挂起，而运行新的进程。这种方式可以使新的短作业获得良好的服务。
+    12. 交互式系统中的调度
+        1. 轮转调度：
+            1. 每个进程被分配一个时间段，称为时间片，即允许该进程在该时间段中运行。
+            2. 如果在时间片结束时该进程还在运行，则将剥夺 CPU 并分配给另一个进程。如果该进程在时间片结束前阻塞或结束，则 CPU 立即进行切换。
+            3. 时间片设的太短会导致过多的进程切换，降低了 CPU 效率，而设得太长有可能引起对短的交互请求的响应时间变长。将时间片设为 20 ～ 50ms 通常是一个比较合理的折中。
+        2. 优先级调度：
+            1. 每个进程被赋予了一个优先级，允许优先级最高的可运行进程先运行。
+            2. 为了防止高优先级进程无休止地运行下去，调度程序可以在每个时钟中断降低当前进程的优先级。如果这个动作导致该进程的优先级低于次高优先级的进程，则进行进程切换。
+            3. 一个可采用的方法是，每个进程可以被赋予一个允许运行的最大时间片，当这个时间片用完时，下一个次高优先级的进程获得机会运行。
+        3. 多级队列
+        4. 最短进程优先
+        5. 保证调度：向用户做出明确的性能保证，然后去实现它。
+        6. 彩票调度：其基本思想是向进程提供各种系统资源的彩票，一旦需要做出一项调度决策时，就随机抽出一张彩票，拥有该彩票的进程获得该资源。
+        7. 公平公正分享调度
+    13. 实时系统中的调度
+        1. 实时系统通常可以分为硬实时和软实时，前者的含义是必须满足绝对的截止时间，后者的含义是虽然不希望偶尔错失截止时间，但是可以容忍。
+        2. 在上面两种情形中，实时性能都是通过把程序划分为一组进程而实现的，其中每个进程的行为是可预测和提前掌握的。这些进程一般寿命较短，并且极快的就运行完成。
+        3. 实时系统中的事件可以按照响应方式进一步分类为周期性（以规则的时间间隔发生）事件或非周期性（发生时间不可预知）事件。
+        4. 一个系统可能要响应多个周期性事件流。
+    14. 策略和机制：
