--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -200,4 +200,9 @@
         2. 在上面两种情形中，实时性能都是通过把程序划分为一组进程而实现的，其中每个进程的行为是可预测和提前掌握的。这些进程一般寿命较短，并且极快的就运行完成。
         3. 实时系统中的事件可以按照响应方式进一步分类为周期性（以规则的时间间隔发生）事件或非周期性（发生时间不可预知）事件。
         4. 一个系统可能要响应多个周期性事件流。
-    14. 策略和机制：
+    14. 策略和机制：将调度机制与调度策略分离，将调度算法以某种形式参数化，而参数可以由用户进程填写。
+    15. 线程调度：当若干进程都有多个线程时，就存在两个层次的并行：进程和线程。在这样的系统中调度处理有本质差别，这取决于所支持的是用户级线程还是内核级线程或两者都支持。
+        1. 用户级线程和内核级线程之间的差别在于性能。用户级线程的线程切换需要少量的机器指令，而内核级线程需要完整的上下文切换，修改内存映像，使高速缓存失效，这导致了若干数量级的延迟。
+        2. 另一方面，在使用内核级线程时，一旦线程阻塞在 I/O 上就不需要像在用户级线程中那样将整个进程挂起。
+        3. 用户级线程可以使用专为应用程序定制的线程调度程序。
+5. 经典的IPC问题
