--- a/阅读笔记/现代操作系统/第二章：进程与线程.md
+++ b/阅读笔记/现代操作系统/第二章：进程与线程.md
@@ -146,6 +146,7 @@
         13. 屏障：该同步机制是准备用于进程组而不是用于双进程的生产者-消费者类情形的。在有些应用中划分了若干阶段，并且规定，除非所有的进程都就绪准备着手下一个阶段，否则任何进程都不能进入下一个阶段。可以通过在每个阶段的结尾安置屏障来实现这种行为。当一个进程到达屏障时，它就被屏障阻拦，直到所有进程都到达该屏障为止。
 
 4. 调度
+
     1. 调度程序：当计算机系统是多道程序设计系统时，通常就会有多个进程或线程同时竞争 CPU。只要有两个或多个进程处于就绪状态，这种情形就会发生。如果只有一个 CPU 可用，那么就必须选择下一个要运行的进程。在操作系统中，完成选择工作的这一部分称为调度程序。许多适用于进程调度的处理方法也同样适用于线程调度。
     2. 调度算法：调度程序使用的算法。
     3. 调度程序需要考虑 CPU 的利用率，因为进程切换的代价是比较高的：用户态必须切到内核态，然后要保存当前进程的状态，包括在进程表中存储寄存器以便以后重新装载。在许多系统中，内存映像也必须保存。然后通过调度算法选定一个新的进程，将该进程的内存映像重新装入 MMU，最后新进程开始运行。除此之外，进程切换还要使整个内存高速缓存失效，强迫缓存从内存中动态重新装入两次（进入内核一次，离开内核一次）。如果每秒钟切换进程的次数太多，会耗费大量 CPU 时间。
@@ -206,4 +207,15 @@
         2. 另一方面，在使用内核级线程时，一旦线程阻塞在 I/O 上就不需要像在用户级线程中那样将整个进程挂起。
         3. 用户级线程可以使用专为应用程序定制的线程调度程序。
 
-5. 经典的IPC问题
+5. 经典的 IPC 问题
+
+    1. 哲学家就餐问题：解决死锁问题。对于互斥访问有限资源的竞争问题一类的建模过程十分有用。
+    2. 读者-写者问题：为数据库访问建立了一个模型。
+
+6. 小结
+    1. 为了隐蔽中断的影响，操作系统提供了一个由并行运行的顺序进程组成的概念模型。进程可以动态地创建和终止。每个进程都有自己的地址空间。
+    2. 对于某些应用而言，在一个进程中使用多个控制线程是有益的。这些线程被独立调度，每个线程有自己的堆栈，但是在一个进程中的所有线程共享一个公共地址空间。线程可以在用户控件或内核中实现。
+    3. 进程之间通过进程间通信原语彼此通信，如信号量、管程或消息。这些原语用来确保同一时刻不会有两个进程在临界区中，免除了出现混乱的情形。
+    4. 进程可以处在运行、可运行或阻塞状态，并且在该进程或其他进程执行某个进程间通信原语时，可以改变其状态。线程间通信也是类似的。
+    5. 进程间通信原语可以用来解决诸如生产者-消费者问题、哲学家就餐问题和读者-写者问题等。即便有了这些原语，也要仔细设计以避免出错和死锁。
+    6. 已经有一大批研究出来的调度算法。某些算法主要用于批处理系统中，如最短作业优先调度算法。其他算法常用在批处理系统和交互式系统中，它们包括轮转调度、优先级调度、多级队列、保证调度、彩票调度以及公平分享调度等。
